# FootballBettingAna

./: .gitignore  CMakeLists.txt  log.h  main.cpp  readme.md  utils.h
ConfigFile/: config_log.txt  oddfile
